--- a/whatsapp/package.json
+++ b/whatsapp/package.json
@@ -1,34 +1,33 @@
 {
-  "name": "whatsapp",
+  "name": "Ionic2-MeteorCLI-WhatsApp",
   "private": true,
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/platform-server": "^5.1.0",
-    "@ionic/storage": "^2.1.3",
-    "babel-runtime": "^6.26.0",
-    "ionic-angular": "^3.9.2",
-    "ionic-native": "^2.9.0",
-    "ionicons": "^3.0.0",
-    "meteor-node-stubs": "^0.3.2",
-    "meteor-rxjs": "^0.4.8",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.5.5",
-    "zone.js": "^0.8.18"
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/compiler-cli": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/forms": "2.2.1",
+    "@angular/http": "2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/platform-server": "2.2.1",
+    "@ionic/storage": "1.1.7",
+    "babel-runtime": "6.18.0",
+    "ionic-angular": "2.0.0-rc.5",
+    "ionic-native": "2.2.11",
+    "ionicons": "3.0.0",
+    "meteor-node-stubs": "~0.2.0",
+    "meteor-rxjs": "^0.4.7",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@types/meteor": "^1.4.12",
-    "@types/meteor-accounts-phone": "0.0.5",
-    "@types/underscore": "^1.8.5",
-    "meteor-typings": "^1.4.1"
+    "@types/meteor": "^1.3.31",
+    "@types/underscore": "^1.7.36",
+    "meteor-typings": "^1.3.1"
   }
 }
