--- a/whatsapp/package.json
+++ b/whatsapp/package.json
@@ -23,6 +23,7 @@
     "meteor-rxjs": "^0.4.7",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.0-beta.12",
+    "typescript": "^2.6.2",
     "zone.js": "0.6.26"
   },
   "devDependencies": {
