--- a/whatsapp/package.json
+++ b/whatsapp/package.json
@@ -21,6 +21,7 @@
     "ionicons": "3.0.0",
     "meteor-node-stubs": "~0.2.0",
     "meteor-rxjs": "^0.4.7",
+    "moment": "^2.19.4",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.0-beta.12",
     "typescript": "^2.6.2",
